Updated the file with some more coding problems.

--- a/CODING PROBLEMS SOLVED IN PYTHON.ipynb
+++ b/CODING PROBLEMS SOLVED IN PYTHON.ipynb
@@ -511,11 +511,255 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Write a function that computes the volume of a sphere given its radius.\n",
+    "\n",
+    "**The volume of a sphere is given as**$$V = \\frac{4}{3}\\pi r^3$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "113.14285714285712"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "radius = 3\n",
+    "pi = 22/7\n",
+    "\n",
+    "def sphere_volume(radius,pi):\n",
+    "    \n",
+    "    volume = (4/3)*(pi)*(radius**3)\n",
+    "    return volume\n",
+    "\n",
+    "sphere_volume(radius,pi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write a function that checks whether a number is in a given range (inclusive of high and low)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please give your Lower Limit: 5\n",
+      "Please give your Upper Limit: 50\n",
+      "The number 9 is in range.\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_num = 9\n",
+    "\n",
+    "lower_limit = int(input(\"Please give your Lower Limit: \"))\n",
+    "\n",
+    "upper_limit = int(input(\"Please give your Upper Limit: \"))\n",
+    "\n",
+    "def range_check(my_num,lower_limit,upper_limit):\n",
+    "    \n",
+    "    if my_num in range(lower_limit,upper_limit+1):\n",
+    "        \n",
+    "        print(f\"The number {my_num} is in range.\")\n",
+    "    else:\n",
+    "        print(\"The number {} is not in range\".format(my_num))\n",
+    "\n",
+    "range_check(my_num,lower_limit,upper_limit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write a Python function that accepts a string and calculates the number of upper case letters and lower case letters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No. of Uppercase Letters:  3\n",
+      "No. of Lowercase Letters:  34\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_string = \"Hey mate! How is your day going John?\"\n",
+    "\n",
+    "uppercase_list = []\n",
+    "\n",
+    "lowercase_list = []\n",
+    "\n",
+    "def string_check(my_string):\n",
+    "    for letter in my_string:\n",
+    "        if letter.isupper() == True:\n",
+    "            uppercase_list.append(letter) \n",
+    "            # The function \".isupper()\" is used to check whether a string is uppercase letter or not.\n",
+    "            # The function \".islower()\" is used to check whether a string is lowercase letter or not.\n",
+    "            \n",
+    "        else:\n",
+    "            lowercase_list.append(letter)\n",
+    "    \n",
+    "    print(\"No. of Uppercase Letters: \",len(uppercase_list))\n",
+    "    print(\"No. of Lowercase Letters: \",len(lowercase_list))\n",
+    "\n",
+    "string_check(my_string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write a Python function that takes a list and returns a new list with unique elements of the first list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list = [1,1,1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3,3,3,4,4,4,4,4,5,5,5,5,5,5,6,6,6,6,6,6,6,6,6,6,6,7,7,7,7,7,7,7,7,7,7,7]\n",
+    "\n",
+    "def unique():\n",
+    "    my_set = set(my_list)\n",
+    "    return list(my_set)\n",
+    "unique()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write a Python function to multiply all the numbers in a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5040"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list = [1,2,3,4,5,6,7]\n",
+    "\n",
+    "product = 1\n",
+    "\n",
+    "def list_product(my_list,product):\n",
+    "    \n",
+    "    for num in my_list:\n",
+    "        product = product * num\n",
+    "    return product\n",
+    "\n",
+    "list_product(my_list,product)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write a Python function to check whether a string is pangram or not. (Assume the string passed in does not have any punctuation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">**Note** : Pangrams are words or sentences containing every letter of the alphabet at least once.<br>\n",
+    ">**For example** : \"The quick brown fox jumps over the lazy dog\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_string = \"The quick brown fox jumps over the lazy dog\"\n",
+    "\n",
+    "import string\n",
+    "\n",
+    "alphabet = string.ascii_lowercase\n",
+    "# string.ascii_lowercase = abcdefghijkhlmnopqrstuvwxyz\n",
+    "# string.ascii_uppercase = ABCDEFGHIJKLMNOPQRSTUVWXYZ\n",
+    "\n",
+    "def ispangram(alphabet,my_string):\n",
+    "     \n",
+    "    alphabet = set(alphabet)\n",
+    "    # Converting alphabet string into a set.\n",
+    "    \n",
+    "    my_string = my_string.replace(\" \",'')\n",
+    "    # Remove spaces from my_string\n",
+    "    # replace() takes atleast 2 arguments. \n",
+    "    # therefore both \"\" and '' are mentioned inside it. \n",
+    "    \n",
+    "    my_string = my_string.lower()\n",
+    "    # Converting the whole string in lowercase.\n",
+    "    \n",
+    "    my_string = set(my_string)\n",
+    "    # Converting string my_string into a set.\n",
+    "    \n",
+    "    return my_string == alphabet\n",
+    "\n",
+    "ispangram(alphabet,my_string)"
+   ]
   }
  ],
  "metadata": {
