Added a new secton called Inheritance.

--- a/COMPLETE PYTHON BOOTCAMP FROM ZERO TO HERO IN PYTHON COURSE NOTES - Inst.Jose Portilia.ipynb
+++ b/COMPLETE PYTHON BOOTCAMP FROM ZERO TO HERO IN PYTHON COURSE NOTES - Inst.Jose Portilia.ipynb
@@ -7192,10 +7192,290 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inheritance is a way to form new classes using classes that have already been defined. The newly formed classes are called derived classes. And, the classes that we derive from are called base classes. Important benefits of inheritance are code reuse and reduction of complexity of a program. The derived classes (descendants) override or extend the functionality of base classes (ancestors)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's see an example by incorporating our previous work on the Dog class:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# A new class - Animal - is created.\n",
+    "class Animal:\n",
+    "\n",
+    "    # This  def __init__(self) function is the first function to be executed as soon as we create a new instance from this class.\n",
+    "    # Keep this in mind.\n",
+    "    def __init__(self):\n",
+    "        print(\"Animal created\")\n",
+    "\n",
+    "    # When I run this function on my object/instance, it is going to print the string \"Animal\".\n",
+    "    def whoAmI(self):\n",
+    "        print(\"Animal\")\n",
+    "\n",
+    "    # When I run this function on my object/instance, it is going to print string \"Eating\".\n",
+    "    # Since this, method is not overwritten or mentioned anywhere inside the derived class Dog (see the code below)\n",
+    "    # we can ALSO use this function for any instance created within the derived class Dog (in future).\n",
+    "    def eat(self):\n",
+    "        print(\"Eating\")\n",
+    "\n",
+    "\n",
+    "# Creating a new class Dog.\n",
+    "# This new class Dog is derived/inherited from the base class Animal that we defined earlier. \n",
+    "# Any instance/object defined within this derived class Dog is going to inherit all the methods/functions\n",
+    "# that are defined within the parent/base/ancestor class Animal\n",
+    "# Class Dog is called the Descendant Class and Class Animal is called the Ancestor Class.\n",
+    "class Dog(Animal):\n",
+    "\n",
+    "    # Overwritting the __init__(self) function craeted within the base class Animal\n",
+    "    # This function executes as soon as we create an instance/object within the derived class Dog.\n",
+    "    # If I do not define this __init__(self) function inside the derived class Dog again\n",
+    "    # then, as soon as we create a new instance for the derived class Dog\n",
+    "    # python will simply execute the __init__(self) function that is already defined under the parent class Animal.\n",
+    "    # This method will be applicable to any object/instance defined under the derived class Dog\n",
+    "    # But will not be applicable to objects/instances under parent class Animal.\n",
+    "    def __init__(self):\n",
+    "\n",
+    "        # Now I am saying, that as soon as I create an instance/object within the derived class Dog\n",
+    "        # Firstly, I want to execute the __init__(self) method that is defined under the base/parent/ancestor class Animal\n",
+    "        # i.e print the string \"Animal created\"\n",
+    "        # DITTO -- THAT IS EXACTLY SAME TO SAME RESULT WITHOUT MAKING ANY CHANGES.\n",
+    "        Animal.__init__(self)\n",
+    "        # Secondly, print string \"Dog Created\"\n",
+    "        print(\"Dog created\")\n",
+    "\n",
+    "    # Overwritting the functionality of whoamI(self) method.\n",
+    "    # whoamI(self) method has a different set of instruction under the parent class Animal.\n",
+    "    # This method will be applicable to any object/instance defined under the derived class Dog\n",
+    "    # But will not be applicable to objects/instances under parent class Animal.\n",
+    "    def whoAmI(self):\n",
+    "        print(\"Dog\")\n",
+    "\n",
+    "    # Adding a new method bark(self) inside the derived class Dog\n",
+    "    # This method will be applicable to any object/instance defined under the derived class Dog\n",
+    "    # But will not be applicable to objects/instances under parent class Animal.\n",
+    "    def bark(self):\n",
+    "        print(\"Woof!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Animal created\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Firstly, let us create a new instance from the parent class Animal.\n",
+    "# Notice, that def __init__(self) function is the first function to be executed as soon as we create a new instance from this class.\n",
+    "# Keep this in mind.\n",
+    "\n",
+    "f = Animal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Animal\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using function whoAmI() [defined inside the parent class Animal] on the instance.\n",
+    "f.whoAmI()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eating\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using function eat() [defined inside the parent class Animal] on the instance.\n",
+    "f.eat()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Animal' object has no attribute 'bark'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-33-43419f3f3113>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# Because the object/instance f is actually created under the base class Animal\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# and not under the derived class Dog.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbark\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Animal' object has no attribute 'bark'"
+     ]
+    }
+   ],
+   "source": [
+    "# Now if we try to use a Dog class method/function bark() (not defined under base class Animal) \n",
+    "# it shows an error.\n",
+    "# Because the object/instance f is actually created under the base class Animal \n",
+    "# and not under the derived class Dog.\n",
+    "f.bark()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Animal created\n",
+      "Dog created\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now, let us create an instance/object from the derived class Dog\n",
+    "# Now, as soon as I create the instance, \n",
+    "# the __init__(self) method of both the parent class Animal and derived class Dog is executed.\n",
+    "# because we have specifically mentioned the -- Animal.__init__(self) -- line inside the \n",
+    "# __init__(self) method of Dog class.\n",
+    "bolt = Dog()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dog\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using the method whoAmI(self) on the instance bolt (created under the derived class Dog)\n",
+    "# Notice that it gives a different output for the instance bolt (created under the derived class Dog)\n",
+    "# than the the time we used it for the instance f (created under the parent class Animal)\n",
+    "# This is because we have overwritten this function inside the derived class Dog once again to give a different output.\n",
+    "bolt.whoAmI()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Animal\n"
+     ]
+    }
+   ],
+   "source": [
+    "# To see the difference.\n",
+    "f.whoAmI()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eating\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now, since instance bolt is defined under the class Dog (which is derived from the parent class Animal)\n",
+    "# it inherits all the functions/methods defined inside the parent class Animal by default.\n",
+    "# Notice, there is a method eat(self) defined under the parent class Animal.\n",
+    "# This function has NOT be overwritten (like whoAmI() AND __init(self) methods) \n",
+    "# nor mentioned anywhere inside the derived class Dog.\n",
+    "# we can use this function for instance bolt also.\n",
+    "\n",
+    "bolt.eat()\n",
+    "\n",
+    "# Notice that it gives the same output as defined under the Animal class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Woof!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using the method/function bark(self) [defined under the derived class Dog]\n",
+    "# on the object/instance bolt created within the derived class Dog.\n",
+    "bolt.bark()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example, we have two classes: Animal and Dog. The Animal is the base class, the Dog is the derived class.<br>\n",
+    "\n",
+    "The derived class inherits the functionality of the base class.\n",
+    "- It is shown by the **eat()** method.<br>\n",
+    "\n",
+    "The derived class modifies existing behavior of the base class.\n",
+    "- Shown by the **whoAmI()** method and **__init__(self)** method.<br>\n",
+    "\n",
+    "Finally, the derived class extends the functionality of the base class.\n",
+    "- Shown by defining a new **bark()** method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
