--- a/COMPLETE PYTHON BOOTCAMP FROM ZERO TO HERO IN PYTHON COURSE NOTES - Inst.Jose Portilia.ipynb
+++ b/COMPLETE PYTHON BOOTCAMP FROM ZERO TO HERO IN PYTHON COURSE NOTES - Inst.Jose Portilia.ipynb
@@ -7466,10 +7466,10 @@
     "The derived class inherits the functionality of the base class.\n",
     "- It is shown by the **eat()** method.<br>\n",
     "\n",
-    "The derived class modifies existing behavior of the base class.\n",
+    "The derived class CAN MODIFY the existing behavior of the base class.\n",
     "- Shown by the **whoAmI()** method and **__init__(self)** method.<br>\n",
     "\n",
-    "Finally, the derived class extends the functionality of the base class.\n",
+    "Finally, the derived class CAN EXTEND the functionality of the base class.\n",
     "- Shown by defining a new **bark()** method"
    ]
   },
