Added sections on Polymorphism and Special Methods under the heading Object Oriented Programming.

--- a/COMPLETE PYTHON BOOTCAMP FROM ZERO TO HERO IN PYTHON COURSE NOTES - Inst.Jose Portilia.ipynb
+++ b/COMPLETE PYTHON BOOTCAMP FROM ZERO TO HERO IN PYTHON COURSE NOTES - Inst.Jose Portilia.ipynb
@@ -7476,6 +7476,317 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Polymorphism\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Python, **Polymorphism** refers to the way in which different object classes can share the same method name. The best way to explain this is by example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Niko says Woof!\n",
+      "Felix says Meow!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Dog:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def speak(self):\n",
+    "        return self.name+' says Woof!'\n",
+    "    \n",
+    "class Cat:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def speak(self):\n",
+    "        return self.name+' says Meow!'\n",
+    "\n",
+    "niko = Dog('Niko')\n",
+    "felix = Cat('Felix')\n",
+    "\n",
+    "print(niko.speak())\n",
+    "print(felix.speak())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we have a Dog class and a Cat class, and each has a .speak() method. When called, each object's .speak() method returns a result unique to the object."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There a few different ways to demonstrate polymorphism. First, with a for loop:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Niko says Woof!\n",
+      "Felix says Meow!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for pet in [niko,felix]:\n",
+    "    print(pet.speak())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another is with functions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Niko says Woof!\n",
+      "Felix says Meow!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pet_speak(pet):\n",
+    "    print(pet.speak())\n",
+    "\n",
+    "pet_speak(niko)\n",
+    "pet_speak(felix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In both cases we were able to pass in different object types, and we obtained object-specific results from the same mechanism."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another common practice is to use abstract classes and inheritance. An abstract class is one that never expects to be instantiated (no object will ever be made under that class). For example, we will never have an Animal object, only Dog and Cat objects, although Dogs and Cats are derived from Animals:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fido says Woof!\n",
+      "Isis says Meow!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Defining a Abstract Class Animal\n",
+    "class Animal:\n",
+    "    def __init__(self, name):    \n",
+    "        self.name = name\n",
+    "\n",
+    "    def speak(self):              # Abstract method, defined by convention only\n",
+    "        raise NotImplementedError(\".speak() Function is not executable for object under Animal class.\")\n",
+    "\n",
+    "# Using Inheritance\n",
+    "class Dog(Animal):\n",
+    "    \n",
+    "    # Modifying this function for Dog() class.\n",
+    "    def speak(self):\n",
+    "        return self.name+' says Woof!'\n",
+    "    \n",
+    "class Cat(Animal):\n",
+    "\n",
+    "    # Modifying this function for Cat() class.\n",
+    "    def speak(self):\n",
+    "        return self.name+' says Meow!'\n",
+    "    \n",
+    "fido = Dog('Fido')\n",
+    "isis = Cat('Isis')\n",
+    "\n",
+    "print(fido.speak())\n",
+    "print(isis.speak())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets us define an object under the Animal() class and use .speak() function on it. Observe what happens:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": ".speak() Function is not executable for object under Animal class.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-6c06ef4b0bd1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0makamaru\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mAnimal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Akamaru\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0makamaru\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mspeak\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-9-fe4cca8c6105>\u001b[0m in \u001b[0;36mspeak\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mspeak\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m              \u001b[1;31m# Abstract method, defined by convention only\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\".speak() Function is not executable for object under Animal class.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;31m# Using Inheritance\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNotImplementedError\u001b[0m: .speak() Function is not executable for object under Animal class."
+     ]
+    }
+   ],
+   "source": [
+    "akamaru = Animal(\"Akamaru\")\n",
+    "akamaru.speak()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Special Methods\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `__init__()`, `__str__()`, `__len__()` and `__del__()` are some special pre-defined methods used directly in Python OOP. We have already seen the use of `__init__()` method. Let us see the following example to understand the use of the rest. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Book:\n",
+    "\n",
+    "    # This special method block will be executed as soon as an object is instantiated under the class Book.\n",
+    "    # Every Object under the class Book will have the attributes title, author, and pages.\n",
+    "    def __init__(self, title, author, pages):\n",
+    "\n",
+    "        print(\"A book is created\")\n",
+    "        self.title = title\n",
+    "        self.author = author\n",
+    "        self.pages = pages\n",
+    "\n",
+    "    # This special method when called upon an object, lets you print a string of your choice.\n",
+    "    def __str__(self):\n",
+    "\n",
+    "        return \"Title: %s, Author: %s, Pages: %s\" %(self.title, self.author, self.pages)\n",
+    "\n",
+    "    # This special method returns only integer values AND NOTHING ELSE. Keep that in mind.\n",
+    "    def __len__(self):\n",
+    "\n",
+    "        return self.pages\n",
+    "\n",
+    "    # This special method is used to delete an object created under a class.\n",
+    "    def __del__(self):\n",
+    "\n",
+    "        # You can do whatever you want inside this function. Nothing is limited.\n",
+    "        print(\"A book is destroyed\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A book is created\n",
+      "Title: Python Rocks!, Author: Jose Portilla, Pages: 159\n",
+      "159\n",
+      "A book is destroyed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating object book under the class Book.\n",
+    "book = Book(\"Python Rocks!\", \"Jose Portilla\", 159)\n",
+    "\n",
+    "#Special Methods\n",
+    "print(book)   # Way to call the special method __str__() on object book.\n",
+    "print(len(book))    # Way to call the special method __len__() on object book.\n",
+    "del book    # Way to call the special method __del__() on object book."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'book' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-30-36d237dcf0c8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbook\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'book' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(book)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now as you can see, the object book has been deleted by the `__del__(self)` method and is no longer recognised by the program."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thank You Very Much!\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
